Add post endpoint for starting scan
